# ChangeLog for dev-python/texttable
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  18 Mar 2012; James Rowe <jnrowe@gmail.com> texttable-0.8.1.ebuild:
  Switched to EAPI4.

  16 Jan 2012; James Rowe <jnrowe@gmail.com> -texttable-0.8.0.ebuild,
  texttable-0.8.1.ebuild:
  Keyworded x86.

  16 Jan 2012; James Rowe <jnrowe@gmail.com> texttable-0.8.1.ebuild:
  Keyworded amd64.

*texttable-0.8.1 (17 Dec 2011)

  17 Dec 2011; James Rowe <jnrowe@gmail.com> +texttable-0.8.1.ebuild:
  Version bump [507], now supports Python 2.{4,5} too.

  18 Nov 2011; James Rowe <jnrowe@gmail.com> -texttable-0.7.0-r1.ebuild,
  texttable-0.8.0.ebuild:
  Keyworded x86.

  18 Nov 2011; James Rowe <jnrowe@gmail.com> texttable-0.8.0.ebuild:
  Keyworded amd64.

  14 Nov 2011; James Rowe <jnrowe@gmail.com> metadata.xml:
  Removed redundant herd info.

  02 Mar 2011; James Rowe <jnrowe@gmail.com> texttable-0.7.0-r1.ebuild:
  Use PN in PYTHON_MODNAME [cosmetic].

  12 Jan 2011; James Rowe <jnrowe@gmail.com> +watch:
  Added watch file for package updates.

  02 Dec 2010; James Rowe <jnrowe@gmail.com> -texttable-0.7.0.ebuild,
  texttable-0.7.0-r1.ebuild:
  Keyworded x86.

  01 Dec 2010; James Rowe <jnrowe@gmail.com> texttable-0.7.0-r1.ebuild:
  Keyworded amd64.

  06 Nov 2010; James Rowe <jnrowe@gmail.com> texttable-0.7.0-r1.ebuild:
  Fix repoman copyright header warning.

*texttable-0.7.0-r1 (31 Oct 2010)

  31 Oct 2010; James Rowe <jnrowe@gmail.com> +texttable-0.7.0-r1.ebuild:
  Support multiple Python versions, and fix modname for bytecode compilation
  [219].

  21 Mar 2010; James Rowe <jnrowe@gmail.com> texttable-0.7.0.ebuild:
  Added PYTHON_DEPEND setting.

  16 Mar 2010; James Rowe <jnrowe@gmail.com> texttable-0.7.0.ebuild:
  Keyworded x86.

  04 Mar 2010; James Rowe <jnrowe@gmail.com> texttable-0.7.0.ebuild:
  Updated homepage and download locations.

  01 Mar 2010; James Rowe <jnrowe@gmail.com> texttable-0.7.0.ebuild:
  Keyworded amd64.
